fixtures/solidity/translated_semantic_tests/errors/weird_name/weird_name.sol
error error(uint a);
contract C {
    function f() public pure {
        revert error(2);
    }
}